--- a/hatch.cabal
+++ b/hatch.cabal
@@ -9,30 +9,47 @@ maintainer:         seth.h@bluechipfinancial.com
 category:           Data
 extra-source-files: CHANGELOG.md
 
-library
-    exposed-modules:  Hatch.Decode, Hatch.Encode, Hatch.Types
-    -- other-modules:
-    -- other-extensions:
-    build-depends:    
-      base >=4.16.4.0,
+common shared
+    ghc-options: -Wall
+    build-depends:
+      base >= 4.16.4.0,
       aeson,
       chronos,
       megaparsec,
-      text
+      text,
+      cleff,
+      optparse-applicative
+
+library
+    import: shared
+    exposed-modules:  Hatch.Decode, Hatch.Encode, Hatch.Types
+    -- other-modules:
+    -- other-extensions:
     hs-source-dirs:   src
     default-language: Haskell2010
 
 executable hatch
+    import: shared
     hs-source-dirs:   app
     main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
     -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
       base >=4.16.4.0,
       optparse-applicative,
-      hatch
+      hatch,
+      text,
+      cleff
     default-language: Haskell2010
+
+test-suite spec
+    import: shared
+    type: exitcode-stdio-1.0
+    main-is: Spec.hs
+--    other-modules:
+    hs-source-dirs: test
+    build-depends:
+      tasty,
+      tasty-hunit,
+      hatch
+  
