--- a/hatch.cabal
+++ b/hatch.cabal
@@ -12,7 +12,7 @@ extra-source-files: CHANGELOG.md
 common shared
     ghc-options: -Wall
     build-depends:
-      base >= 4.16.4.0,
+      base,
       aeson,
       chronos,
       megaparsec,
@@ -35,7 +35,6 @@ executable hatch
     -- other-modules:
     -- other-extensions:
     build-depends:
-      base >=4.16.4.0,
       optparse-applicative,
       hatch,
       text,
